# TerminalCalculator

./: .gitignore  .vimrc  CMakeLists.txt
include/: dic.h  element.h  main.h  stack.h  utils.h
src/: dic.c  element.c  main.c  stack.c  utils.c
